force-app/main/default/objects/Time_Off_Request__c/Time_Off_Request__c.object-meta.xml
<CustomObject>
    <label>Time Off Request</label>
    <nameField>
        <displayFormat>TOF-{00000}</displayFormat>
        <label>Time Off Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Off Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>