force-app/main/default/objects/Time_Off_Request__c/fields/Creator_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Creator_Manager_Id__c</fullName>
    <description>18-char Id of CreatedBy.ManagerId for flows and integrations (Get Records cannot traverse CreatedBy.ManagerId on this object in some orgs).</description>
    <formula>IF(
  ISBLANK(CreatedBy.ManagerId),
  &quot;&quot;,
  CASESAFEID(CreatedBy.ManagerId)
)</formula>
    <label>Creator Manager Id</label>
    <type>Text</type>
</CustomField>