force-app/main/default/objects/Time_Off_Request__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>DateValue( End_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>