force-app/main/default/objects/Time_Off_Request__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <inlineHelpText>Automatically calculated from Start, Span Type, and Span Duration.</inlineHelpText>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>