force-app/main/default/objects/Time_Off_Request__c/fields/Full_Day__c.field-meta.xml
<CustomField>
    <fullName>Full_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated—use Span Type (Hours vs Full day). Default false; not on page layout. Delete this field in a later release when integrations allow.</description>
    <label>Full day (deprecated)</label>
    <type>Checkbox</type>
</CustomField>