force-app/main/default/objects/Time_Off_Request__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legacy lookup; no longer populated by automation. Use Manager_Formula__c for the creator&apos;s manager.</description>
    <label>Manager (legacy lookup)</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Time Off Requests (Manager)</relationshipLabel>
    <relationshipName>Time_Off_Requests_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>