force-app/main/default/objects/Time_Off_Request__c/fields/Manager_Formula__c.field-meta.xml
<CustomField>
    <fullName>Manager_Formula__c</fullName>
    <description>Creator&apos;s manager display name (FirstName + LastName; avoids compound Name in cross-object formula).</description>
    <formula>IF(
  ISBLANK(CreatedBy.ManagerId),
  &quot;&quot;,
  TRIM(BLANKVALUE(CreatedBy.Manager.FirstName, &quot;&quot;) &amp; &quot; &quot; &amp; BLANKVALUE(CreatedBy.Manager.LastName, &quot;&quot;))
)</formula>
    <inlineHelpText>Automatically reflects the manager on the user who created this request.</inlineHelpText>
    <label>Manager</label>
    <type>Text</type>
</CustomField>