force-app/main/default/objects/Time_Off_Request__c/fields/Overlap__c.field-meta.xml
<CustomField>
    <fullName>Overlap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overlap</label>
    <type>Checkbox</type>
</CustomField>