force-app/main/default/objects/Time_Off_Request__c/fields/Span_Duration__c.field-meta.xml
<CustomField>
    <fullName>Span_Duration__c</fullName>
    <description>Numeric duration kept in sync from Span Duration (picklist) by before-save flow. Hidden from the page layout.</description>
    <label>Span Duration (internal)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>