force-app/main/default/objects/Time_Off_Request__c/fields/Span_Duration_Select__c.field-meta.xml
<CustomField>
    <fullName>Span_Duration_Select__c</fullName>
    <inlineHelpText>Partial (Hours): 1–8. Full Day: leave this blank; duration is calculated from Start and End dates.</inlineHelpText>
    <label>Span Duration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Span_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>11</fullName>
                <isActive>false</isActive>
                <label>11</label>
            </value>
            <value>
                <fullName>12</fullName>
                <isActive>false</isActive>
                <label>12</label>
            </value>
            <value>
                <fullName>13</fullName>
                <isActive>false</isActive>
                <label>13</label>
            </value>
            <value>
                <fullName>14</fullName>
                <isActive>false</isActive>
                <label>14</label>
            </value>
            <value>
                <fullName>15</fullName>
                <isActive>false</isActive>
                <label>15</label>
            </value>
            <value>
                <fullName>16</fullName>
                <isActive>false</isActive>
                <label>16</label>
            </value>
            <value>
                <fullName>17</fullName>
                <isActive>false</isActive>
                <label>17</label>
            </value>
            <value>
                <fullName>18</fullName>
                <isActive>false</isActive>
                <label>18</label>
            </value>
            <value>
                <fullName>19</fullName>
                <isActive>false</isActive>
                <label>19</label>
            </value>
            <value>
                <fullName>20</fullName>
                <isActive>false</isActive>
                <label>20</label>
            </value>
            <value>
                <fullName>21</fullName>
                <isActive>false</isActive>
                <label>21</label>
            </value>
            <value>
                <fullName>22</fullName>
                <isActive>false</isActive>
                <label>22</label>
            </value>
            <value>
                <fullName>23</fullName>
                <isActive>false</isActive>
                <label>23</label>
            </value>
            <value>
                <fullName>24</fullName>
                <isActive>false</isActive>
                <label>24</label>
            </value>
            <value>
                <fullName>25</fullName>
                <isActive>false</isActive>
                <label>25</label>
            </value>
            <value>
                <fullName>26</fullName>
                <isActive>false</isActive>
                <label>26</label>
            </value>
            <value>
                <fullName>27</fullName>
                <isActive>false</isActive>
                <label>27</label>
            </value>
            <value>
                <fullName>28</fullName>
                <isActive>false</isActive>
                <label>28</label>
            </value>
            <value>
                <fullName>29</fullName>
                <isActive>false</isActive>
                <label>29</label>
            </value>
            <value>
                <fullName>30</fullName>
                <isActive>false</isActive>
                <label>30</label>
            </value>
            <value>
                <fullName>31</fullName>
                <isActive>false</isActive>
                <label>31</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>