force-app/main/default/objects/Time_Off_Request__c/fields/Span_Type__c.field-meta.xml
<CustomField>
    <fullName>Span_Type__c</fullName>
    <inlineHelpText>Partial (Hours): choose 1–8 hours on one day. Full Day: one calendar day only—create another request for more days.</inlineHelpText>
    <label>Span Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full_Day</fullName>
                <label>Full Day</label>
            </value>
            <value>
                <fullName>Hours</fullName>
                <label>Partial (Hours)</label>
            </value>
            <value>
                <fullName>Days</fullName>
                <isActive>false</isActive>
                <label>Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>