force-app/main/default/objects/Time_Off_Request__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>DateValue( Start_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>