force-app/main/default/objects/Time_Off_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Travelling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>