force-app/main/default/objects/Time_Off_Request__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <formula>CreatedBy.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserID</label>
    <type>Text</type>
</CustomField>