force-app/main/default/objects/Time_Off_Request__c/fields/Working_Day_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Working_Day_Equivalent__c</fullName>
    <formula>IF(
    ISPICKVAL(Span_Type__c, &quot;Hours&quot;),
    Span_Duration__c / 8,
    IF(
        ISPICKVAL(Span_Type__c, &quot;Full_Day&quot;),
        Span_Duration__c,
        IF(
            TEXT(Span_Type__c) = &quot;Days&quot;,
            Span_Duration__c,
            null
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Day Equivalent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>