force-app/main/default/objects/Time_Off_Request__c/validationRules/Block_Overlap.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Overlap</fullName>
    <active>true</active>
    <errorConditionFormula>Overlap__c</errorConditionFormula>
    <errorMessage>This time-off request overlaps with another approved or pending request. Please adjust the dates.</errorMessage>
</ValidationRule>