force-app/main/default/objects/Time_Off_Request__c/validationRules/Creator_Only_Submit_Recall.validationRule-meta.xml
<ValidationRule>
    <fullName>Creator_Only_Submit_Recall</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Stage__c),
  OR(
    ISPICKVAL(Stage__c, &apos;Submitted for Approval&apos;),
    AND(ISPICKVAL(Stage__c, &apos;Draft&apos;), TEXT(PRIORVALUE(Stage__c)) = &apos;Submitted for Approval&apos;)
  ),
  CreatedById &lt;&gt; $User.Id
)</errorConditionFormula>
    <errorMessage>Only the request creator can submit for approval or recall the request.</errorMessage>
</ValidationRule>