force-app/main/default/objects/Time_Off_Request__c/validationRules/End_Computed_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Computed_Required</fullName>
    <active>true</active>
    <description>End Date Time must be present when span inputs are complete (set by before-save flow).</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Start_Date_Time__c)),
  NOT(ISBLANK(TEXT(Span_Type__c))),
  OR(
    ISPICKVAL(Span_Type__c, &quot;Full_Day&quot;),
    NOT(
      AND(
        ISBLANK(TEXT(Span_Duration_Select__c)),
        ISBLANK(Span_Duration__c)
      )
    )
  ),
  ISBLANK(End_Date_Time__c)
)</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>End Date Time could not be calculated. Check Start, Span Type, and Span Duration (for Partial (Hours)).</errorMessage>
</ValidationRule>