force-app/main/default/objects/Time_Off_Request__c/validationRules/Full_Day_Duration_Must_Be_One.validationRule-meta.xml
<ValidationRule>
    <fullName>Full_Day_Duration_Must_Be_One</fullName>
    <active>true</active>
    <description>For Full Day, span duration is auto-calculated from Start/End dates; manual span entry is not allowed.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Span_Type__c, &quot;Full_Day&quot;),
  NOT(ISBLANK(TEXT(Span_Duration_Select__c)))
)</errorConditionFormula>
    <errorDisplayField>Span_Duration_Select__c</errorDisplayField>
    <errorMessage>For Full Day, do not enter Span Duration. The system calculates it from Start and End dates.</errorMessage>
</ValidationRule>