force-app/main/default/objects/Time_Off_Request__c/validationRules/Full_Day_Single_Calendar_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>Full_Day_Single_Calendar_Day</fullName>
    <active>true</active>
    <description>Full Day requires an end datetime that is not before the start datetime.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Span_Type__c, &quot;Full_Day&quot;),
  NOT(ISBLANK(Start_Date_Time__c)),
  NOT(ISBLANK(End_Date_Time__c)),
  End_Date_Time__c &lt; Start_Date_Time__c
)</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>Full Day end date cannot be before the start date.</errorMessage>
</ValidationRule>