force-app/main/default/objects/Time_Off_Request__c/validationRules/Lock_Non_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Non_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Stage__c, &apos;Draft&apos;)),
  NOT(ISCHANGED(Stage__c))
)</errorConditionFormula>
    <errorMessage>Only Draft records can be edited. Use Recall to bring a submitted request back to Draft.</errorMessage>
</ValidationRule>