force-app/main/default/objects/Time_Off_Request__c/validationRules/Rejection_Reason_Required_When_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required_When_Rejected</fullName>
    <active>true</active>
    <description>When Stage is Rejected, Rejection Reason must be provided.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Stage__c, &quot;Rejected&quot;),
  ISBLANK(Rejection_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Enter a rejection reason before saving a record in Rejected status.</errorMessage>
</ValidationRule>