force-app/main/default/objects/Time_Off_Request__c/validationRules/Span_Duration_Days_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Span_Duration_Days_Range</fullName>
    <active>true</active>
    <description>When Span Type is Days, internal numeric duration must be 1–90 (normally set from the Span Duration dropdown).</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Span_Type__c, &quot;Days&quot;),
  NOT(ISBLANK(Span_Duration__c)),
  OR(
    Span_Duration__c &lt; 1,
    Span_Duration__c &gt; 90
  )
)</errorConditionFormula>
    <errorDisplayField>Span_Duration_Select__c</errorDisplayField>
    <errorMessage>For Days, choose a duration from 1 to 90.</errorMessage>
</ValidationRule>