force-app/main/default/objects/Time_Off_Request__c/validationRules/Span_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Span_Required</fullName>
    <active>true</active>
    <description>Span Type is required. Partial (Hours) needs duration picklist or numeric. Full Day uses Start/End dates to derive duration.</description>
    <errorConditionFormula>OR(
  ISBLANK(TEXT(Span_Type__c)),
  AND(
    ISPICKVAL(Span_Type__c, &quot;Hours&quot;),
    ISBLANK(TEXT(Span_Duration_Select__c)),
    ISBLANK(Span_Duration__c)
  )
)</errorConditionFormula>
    <errorDisplayField>Span_Duration_Select__c</errorDisplayField>
    <errorMessage>Select Span Type and Span Duration (1–8) for Partial (Hours).</errorMessage>
</ValidationRule>