force-app/main/default/objects/Time_Off_Request__c/listViews/My_Time_Off.listView-meta.xml
<ListView>
    <fullName>My_Time_Off</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Type__c</columns>
    <columns>Span_Type__c</columns>
    <columns>Working_Day_Equivalent__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>Manager_Formula__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Time-Off</label>
</ListView>