force-app/main/default/objects/Time_Off_Request__c/listViews/Need_Your_Approval.listView-meta.xml
<ListView>
    <fullName>Need_Your_Approval</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Type__c</columns>
    <columns>Span_Type__c</columns>
    <columns>Working_Day_Equivalent__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Submitted for Approval</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>UserID</value>
    </filters>
    <label>Need Your Approval</label>
</ListView>