force-app/main/default/objects/Time_Off_Request__c/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Span_Type__c</columns>
    <columns>Span_Duration_Select__c</columns>
    <columns>Working_Day_Equivalent__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Submitted for Approval</value>
    </filters>
    <label>Pending Approval</label>
</ListView>